plugins/xpath/xpath-lang/testData/xpath2/highlighting/numberFollowedByToken.xpath2
<error descr="Number literal must be followed by whitespace in XPath 2">10div</error> 2 + 3 mod 2